; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/spl/extr_spl-kmem-cache.c_spl_cache_age.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/spl/extr_spl-kmem-cache.c_spl_cache_age.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32, i32, i32, i32, i64 }

@SKC_MAGIC = common dso_local global i64 0, align 8
@spl_kmem_cache_expire = common dso_local global i32 0, align 4
@KMC_EXPIRE_AGE = common dso_local global i32 0, align 4
@KMC_NOMAGAZINE = common dso_local global i32 0, align 4
@spl_magazine_age = common dso_local global i32 0, align 4
@KMC_BIT_DESTROY = common dso_local global i32 0, align 4
@spl_kmem_cache_taskq = common dso_local global i32 0, align 4
@TQ_SLEEP = common dso_local global i32 0, align 4
@HZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @spl_cache_age to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @spl_cache_age(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %6, %struct.TYPE_5__** %3, align 8
  store i64 0, i64* %4, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @SKC_MAGIC, align 8
  %11 = icmp eq i64 %9, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @ASSERT(i32 %12)
  %14 = load i32, i32* @spl_kmem_cache_expire, align 4
  %15 = load i32, i32* @KMC_EXPIRE_AGE, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %1
  br label %88

19:                                               ; preds = %1
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 3
  %22 = call i32 @atomic_inc(i32* %21)
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = load i32, i32* @KMC_NOMAGAZINE, align 4
  %27 = and i32 %25, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %33, label %29

29:                                               ; preds = %19
  %30 = load i32, i32* @spl_magazine_age, align 4
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %32 = call i32 @on_each_cpu(i32 %30, %struct.TYPE_5__* %31, i32 1)
  br label %33

33:                                               ; preds = %29, %19
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %35 = call i32 @spl_slab_reclaim(%struct.TYPE_5__* %34)
  br label %36

36:                                               ; preds = %74, %33
  %37 = load i32, i32* @KMC_BIT_DESTROY, align 4
  %38 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 1
  %40 = call i64 @test_bit(i32 %37, i32* %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %46, label %42

42:                                               ; preds = %36
  %43 = load i64, i64* %4, align 8
  %44 = icmp ne i64 %43, 0
  %45 = xor i1 %44, true
  br label %46

46:                                               ; preds = %42, %36
  %47 = phi i1 [ false, %36 ], [ %45, %42 ]
  br i1 %47, label %48, label %75

48:                                               ; preds = %46
  %49 = load i32, i32* @spl_kmem_cache_taskq, align 4
  %50 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %51 = load i32, i32* @TQ_SLEEP, align 4
  %52 = call i64 (...) @ddi_get_lbolt()
  %53 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %54 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %53, i32 0, i32 2
  %55 = load i32, i32* %54, align 4
  %56 = sdiv i32 %55, 3
  %57 = load i32, i32* @HZ, align 4
  %58 = mul nsw i32 %56, %57
  %59 = sext i32 %58 to i64
  %60 = add nsw i64 %52, %59
  %61 = call i64 @taskq_dispatch_delay(i32 %49, void (i8*)* @spl_cache_age, %struct.TYPE_5__* %50, i32 %51, i64 %60)
  store i64 %61, i64* %4, align 8
  %62 = load i32, i32* @KMC_BIT_DESTROY, align 4
  %63 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %64 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %63, i32 0, i32 1
  %65 = call i64 @test_bit(i32 %62, i32* %64)
  %66 = icmp ne i64 %65, 0
  br i1 %66, label %67, label %74

67:                                               ; preds = %48
  %68 = load i64, i64* %4, align 8
  %69 = icmp ne i64 %68, 0
  br i1 %69, label %70, label %74

70:                                               ; preds = %67
  %71 = load i32, i32* @spl_kmem_cache_taskq, align 4
  %72 = load i64, i64* %4, align 8
  %73 = call i32 @taskq_cancel_id(i32 %71, i64 %72)
  br label %74

74:                                               ; preds = %70, %67, %48
  br label %36

75:                                               ; preds = %46
  %76 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %77 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %76, i32 0, i32 4
  %78 = call i32 @spin_lock(i32* %77)
  %79 = load i64, i64* %4, align 8
  %80 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %81 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %80, i32 0, i32 5
  store i64 %79, i64* %81, align 8
  %82 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %83 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %82, i32 0, i32 4
  %84 = call i32 @spin_unlock(i32* %83)
  %85 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %86 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %85, i32 0, i32 3
  %87 = call i32 @atomic_dec(i32* %86)
  br label %88

88:                                               ; preds = %75, %18
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @atomic_inc(i32*) #1

declare dso_local i32 @on_each_cpu(i32, %struct.TYPE_5__*, i32) #1

declare dso_local i32 @spl_slab_reclaim(%struct.TYPE_5__*) #1

declare dso_local i64 @test_bit(i32, i32*) #1

declare dso_local i64 @taskq_dispatch_delay(i32, void (i8*)*, %struct.TYPE_5__*, i32, i64) #1

declare dso_local i64 @ddi_get_lbolt(...) #1

declare dso_local i32 @taskq_cancel_id(i32, i64) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @atomic_dec(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
